--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -14,6 +14,7 @@ menu:
 # Available social icons are powered by Font Awesome, so you can use any icon that they offer
 social:
 - {icon: 'linkedin', link: 'https://www.linkedin.com/in/dani-lafarga-47b38116b/'}
+- {icon: 'envelope', link: 'mailto:dlafarga9505@sdsu.edu'}
 
 # Customize site text
 pagination:
