--- a/docs/_data/settings.yml
+++ b/docs/_data/settings.yml
@@ -8,12 +8,11 @@ google-ID: ''
 
 menu:
 - {name: 'About', path: 'menu', url: 'about.html'}
-- {name: 'Writing', path: 'menu', url: 'writing.html'}
+- {name: 'Logs', path: 'menu', url: 'writing.html'}
 - {name: 'Contact', path: 'menu', url: 'contact.html'}
 
 # Available social icons are powered by Font Awesome, so you can use any icon that they offer
 social:
-- {icon: 'github', link: 'https://www.github.com/dlafarga'}
 - {icon: 'linkedin', link: 'https://www.linkedin.com/in/dani-lafarga-47b38116b/'}
 - {icon: 'envelope', link: 'mailto:dlafarga9505@sdsu.edu'}
 # - {icon: 'rss-square', link: '/rss-feed.xml'}
