--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -7,16 +7,15 @@ disqus:
 google-ID: 'UA-112060364-1'
 
 menu:
-- {name: 'About',   url: 'about.html'}
-- {name: 'Writing', url: 'writing.html'}
-- {name: 'Contact', url: 'contact.html'}
+- {name: 'عني/ About',   url: 'about.html'}
+- {name: 'Diaries / ثرثرة', url: 'writing.html'}
+- {name: 'فين كمان؟/Where to find me', url: 'contact.html'}
 
 # Available social icons are powered by Font Awesome, so you can use any icon that they offer
 social:
-- {icon: 'github',     link: 'https://www.github.com/lenpaul'}
-- {icon: 'twitter',    link: 'https://twitter.com/paululele'}
-- {icon: 'linkedin',   link: 'http://www.linkedin.com/in/lenpaul/'}
-- {icon: 'envelope',   link: 'mailto:l.nguyen.paul@gmail.com'}
+- {icon: 'github',     link: 'https://github.com/noorhashem'}
+- {icon: 'twitter',    link: 'https://twitter.com/kintsu9i'}
+- {icon: 'envelope',   link: 'mailto:nour.hashem95@gmail.com'}
 - {icon: 'rss-square', link: '/feed.xml'}
 # - {icon: 'rss-square', link: '/rss-feed.xml'}
 
