--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -13,7 +13,7 @@ menu:
 
 # Available social icons are powered by Font Awesome, so you can use any icon that they offer
 social:
-- {icon: 'github',     link: 'https://www.github.com/lenpaul'}
+- {icon: 'github',     link: 'https://github.com/audreyhsiao'}
 - {icon: 'twitter',    link: 'https://twitter.com/paululele'}
 - {icon: 'linkedin',   link: 'http://www.linkedin.com/in/lenpaul/'}
 - {icon: 'envelope',   link: 'mailto:l.nguyen.paul@gmail.com'}
