Add references section

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -10,6 +10,7 @@ menu:
 - {name: 'About',   url: 'about.html'}
 - {name: 'Writing', url: 'writing.html'}
 - {name: 'Contact', url: 'contact.html'}
+- {name: 'References', url: 'references.html'}
 
 # Available social icons are powered by Font Awesome, so you can use any icon that they offer
 social:
