--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -9,8 +9,8 @@ google-ID:
 menu:
 - {name: 'About',   url: 'about.html'}
 - {name: 'Writing', url: 'writing.html'}
-- {name: 'Contact', url: 'contact.html'}
-- {name: 'References', url: 'references.html'}
+#- {name: 'Contact', url: 'contact.html'}
+#- {name: 'References', url: 'references.html'}
 
 # Available social icons are powered by Font Awesome, so you can use any icon that they offer
 social:
