--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -27,6 +27,6 @@ pagination:
 
 # sharing_button_prompt: 'Feel free to share!'
 
-related_posts: 'Related posts:'
+related_posts: 'Recent posts:'
 
 post_date_prefix: 'Written on'
