--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -15,7 +15,7 @@ menu:
 # Available social icons are powered by Font Awesome, so you can use any icon that they offer
 social:
 # - {icon: 'github',     link: 'https://github.com/bvenkatakarthik'}
-- {icon: 'stack-overflow', link: 'https://math.stackexchange.com/users/303300/?tab=answers'}
+- {icon: 'stack-overflow', link: 'https://math.stackexchange.com'}
 - {icon: 'envelope',   link: 'mailto:bvenkatakarthik@gmail.com'}
 - {icon: 'rss-square', link: '/feed.xml'}
 # - {icon: 'rss-square', link: '/rss-feed.xml'}
