--- a/_config.yml
+++ b/_config.yml
@@ -20,9 +20,9 @@ permalink:           /:title
 plugins:             [jekyll-paginate, jekyll-sitemap, jekyll-feed, jekyll-seo-tag]
 
 # Customise atom feed settings (this is where Jekyll-Feed gets configuration information)
-title:		           'pvphan'
+title:		           'Paul Vinh Phan'
 description:	       'robotics engineer'
-author:              'Paul Vinh Phan'
+author:              'pvphan'
 
 # RSS 2.0 can be used instead of Atom by uncommenting following two lines
 #feed:
