--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ plugins:             [jekyll-paginate, jekyll-sitemap, jekyll-feed, jekyll-seo-t
 
 # Customise atom feed settings (this is where Jekyll-Feed gets configuration information)
 title:		           'Paul Vinh Phan'
-description:	       'robotics engineer'
+description:	       'computer vision, robotics'
 author:              'pvphan'
 
 # RSS 2.0 can be used instead of Atom by uncommenting following two lines
