Edits to blog title and drafting some entries

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -7,8 +7,8 @@ disqus:
 google-ID: 'UA-112060364-1'
 
 menu:
-- {name: 'About/عني',   url: 'about.html'}
-- {name: 'Diaries / ثرثرة', url: 'writing.html'}
+- {name: 'About',   url: 'about.html'}
+- {name: 'Diaries', url: 'writing.html'}
 - {name: 'Knock..Knock', url: 'contact.html'}
 
 # Available social icons are powered by Font Awesome, so you can use any icon that they offer
