--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ permalink:           /:title
 plugins:             [jekyll-paginate, jekyll-sitemap, jekyll-feed, jekyll-seo-tag]
 
 # Customise atom feed settings (this is where Jekyll-Feed gets configuration information)
-title:		           'خلوة الغلبان'
+title:		           'Dangling Conversations'
 description:	       'بعيدًا عن الأنظار '
 author:              'نور'
 
