Minor edits to some posts

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -24,8 +24,8 @@ pagination:
   next_page: 'Newer'
   previous_page: 'Older'
 
-sharing_button_prompt: 'Feel free to share!'
+sharing_button_prompt: ''
 
-related_posts: 'You may also enjoy:'
+related_posts: ''
 
 post_date_prefix: 'Written on'
