--- a/_config.yml
+++ b/_config.yml
@@ -21,8 +21,8 @@ plugins:             [jekyll-paginate, jekyll-sitemap, jekyll-feed, jekyll-seo-t
 
 # Customise atom feed settings (this is where Jekyll-Feed gets configuration information)
 title:		           'Dangling Conversations'
-description:	       'بعيدًا عن الأنظار '
-author:              'نور'
+description:	       ''
+author:              'Noor'
 
 # RSS 2.0 can be used instead of Atom by uncommenting following two lines
 #feed:
