--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,32 +1,33 @@
 # Change 'comments' to true for Disqus comments
 disqus:
-  comments: false
-  disqus_shortname: 'https-lenpaul-github-io-lagrange'
+  comments: true
+  disqus_shortname: "riadafridishibly"
 
 # If you are not using Google Analytics, please change 'google-ID' to an empty string
-google-ID: 'UA-112060364-1'
+google-ID: "UA-138929198-1"
 
 menu:
-- {name: 'About',   url: 'about.html'}
-- {name: 'Writing', url: 'writing.html'}
-- {name: 'Contact', url: 'contact.html'}
+  - { name: "About", url: "about.html" }
+  - { name: "Writing", url: "writing.html" }
+  - { name: "Contact", url: "contact.html" }
+  - { name: "Resume", url: "../resume/shibly_resume.pdf", target: "_blank" }
 
 # Available social icons are powered by Font Awesome, so you can use any icon that they offer
 social:
-- {icon: 'github',     link: 'https://www.github.com/lenpaul'}
-- {icon: 'twitter',    link: 'https://twitter.com/paululele'}
-- {icon: 'linkedin',   link: 'http://www.linkedin.com/in/lenpaul/'}
-- {icon: 'envelope',   link: 'mailto:l.nguyen.paul@gmail.com'}
-- {icon: 'rss-square', link: '/feed.xml'}
+  - { icon: "github", link: "https://github.com/riadafridishibly/" }
+  - { icon: "facebook", link: "https://www.facebook.com/afridishibly/" }
+  - { icon: "twitter", link: "https://twitter.com/afridishibly" }
+  - { icon: "linkedin", link: "https://www.linkedin.com/in/riadafridishibly/" }
+  - { icon: "envelope", link: "mailto:riadafridishibly@gmail.com" }
 # - {icon: 'rss-square', link: '/rss-feed.xml'}
 
 # Customize site text
 pagination:
-  next_page: 'Newer'
-  previous_page: 'Older'
+  next_page: "Newer"
+  previous_page: "Older"
 
-sharing_button_prompt: 'Feel free to share!'
+sharing_button_prompt: "Feel free to share!"
 
-related_posts: 'You may also enjoy:'
+related_posts: "You may also enjoy:"
 
-post_date_prefix: 'Written on'
+post_date_prefix: "Written on"
