--- a/_config.yml
+++ b/_config.yml
@@ -20,10 +20,6 @@ permalink:           /:title
 plugins:             [jekyll-paginate, jekyll-sitemap, jekyll-feed, jekyll-seo-tag]
 
 # Customise atom feed settings (this is where Jekyll-Feed gets configuration information)
-title:		           'Lagrange'
-description:	       'a minimalist Jekyll theme'
-author:              'Paul Le'
-
-# RSS 2.0 can be used instead of Atom by uncommenting following two lines
-#feed:
-#  path: rss-feed.xml
+title:		           'Tyler Sengia Blog'
+description:	       'Software engineering blog, tutorials, and examples.'
+author:              'Tyler Sengia'
