--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -24,6 +24,10 @@ pagination:
 
 sharing_button_prompt: 'Share:'
 
+hide_post_share: true
+
 related_posts: 'Related:'
+
+hide_related_posts: true
 
 post_date_prefix: 'Written:'
