--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -12,7 +12,7 @@ menu:
 
 # Available social icons are powered by Font Awesome, so you can use any icon that they offer
 social:
-- {icon: 'linkedin',   link: 'https://www.linkedin.com/in/cmuld3r'}
+# - {icon: 'linkedin',   link: 'https://www.linkedin.com/in/cmuld3r'}
 - {icon: 'envelope',   link: 'mailto:cmuld3r@gmail.com'}
 # - {icon: 'rss-square', link: '/feed.xml'}
 - {icon: 'rss-square', link: '/rss-feed.xml'}
