--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -29,4 +29,4 @@ sharing_button_prompt: 'Feel free to share!'
 
 related_posts: 'You may also enjoy:'
 
-post_date_prefix: 'Written on'
+post_date_prefix: 'Posted'
