Update about page

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -8,7 +8,7 @@ google-ID: 'G-REB11ND6TN'
 
 menu:
 - {name: 'Archive',   url: 'archive.html'}
-#- {name: 'About',   url: 'about.html'}
+- {name: 'About',   url: 'about.html'}
 
 # Available social icons are powered by Font Awesome, so you can use any icon that they offer
 social:
