--- a/_config.yml
+++ b/_config.yml
@@ -20,8 +20,8 @@ permalink:           /:title
 plugins:             [jekyll-paginate, jekyll-sitemap, jekyll-feed, jekyll-seo-tag]
 
 # Customise atom feed settings (this is where Jekyll-Feed gets configuration information)
-title:		           'Hubert'
-description:	       ''
+title:		           'Garner'
+description:	       'a knowledge base'
 author:              'Mohammadreza Ghofrani'
 
 # RSS 2.0 can be used instead of Atom by uncommenting following two lines
